--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">SketchPlayer</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="play">Play</string>
+    <string name="stop">Stop</string>
 
 </resources>
