--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="play">Play</string>
     <string name="stop">Stop</string>
+    <string name="load">load</string>
 
 </resources>
